--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,18 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.task.scheduling.pool.size=20
+
+spring.task.scheduling.pool.size=10
 scheduler.fixedRate=360000
 
+#spring.task.execution.pool.core-size=100
+#spring.task.execution.pool.max-size=50
+#spring.task.execution.pool.queue-capacity=100
 
-spring.task.execution.pool.core-size=100
-spring.task.execution.pool.max-size=50
+spring.task.execution.pool.core-size=4
+spring.task.execution.pool.max-size=8
 spring.task.execution.pool.queue-capacity=100
-spring.task.execution.pool.keep-alive=10s
+spring.task.execution.pool.keep-alive=30s
+spring.task.execution.thread-name-prefix=my-executor-
+spring.task.execution.shutdown.await-termination=true
+spring.task.execution.shutdown.await-termination-period=10s
